--- a/Tela Editar Insumos/css/styles.css
+++ b/Tela Editar Insumos/css/styles.css
@@ -318,3 +318,40 @@ header h1 {
     margin-bottom: 20px;
   }
 }
+
+.modal {
+  position: fixed; 
+  z-index: 200; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.4); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fffbe6;
+  padding: 20px 30px;
+  border-radius: 12px;
+  border: 2px solid #1e3fa9;
+  width: 300px;
+  box-shadow: 0 8px 16px rgba(30,63,169,0.3);
+  text-align: center;
+}
+
+.close {
+  color: #1e3fa9;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+  color: #d9534f;
+}
